Added Media Details with collapsing title Added viewproperty animator

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources>
     <style name="Theme.Saikou" parent="Theme.Base">
-        <item name="android:statusBarColor">#800F081F</item>
+        <item name="android:statusBarColor">@color/status</item>
         <item name="colorPrimary">@color/pink_200</item>
         <item name="colorOnPrimary">@color/bg_black</item>
         <item name="android:textColor">@color/bg_white</item>
