--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bg"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
@@ -26,22 +27,21 @@
         <nl.joery.animatedbottombar.AnimatedBottomBar
             android:id="@+id/navbar"
             android:layout_width="240dp"
-            android:layout_gravity="center_horizontal"
-            android:padding="8dp"
             android:layout_height="56dp"
-            android:layout_marginBottom="32dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="32dp"
             android:background="@drawable/bottom_nav"
+            android:padding="8dp"
             android:elevation="4dp"
             android:translationZ="12dp"
-
             app:abb_animationDuration="300"
-            app:abb_animationInterpolator="@anim/over_shoot"
 
+            app:abb_animationInterpolator="@anim/over_shoot"
             app:abb_badgeBackgroundColor="#F44336"
             app:abb_indicatorColor="?attr/colorSecondary"
-            app:abb_indicatorLocation="bottom"
 
+            app:abb_indicatorLocation="bottom"
             app:abb_indicatorMargin="28dp"
             app:abb_selectedTabType="text"
             app:abb_tabColor="@color/nav_tab"
