--- a/app/src/main/res/layout/item_compact.xml
+++ b/app/src/main/res/layout/item_compact.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_marginTop="2dp"
     android:orientation="vertical">
 
 
@@ -13,15 +14,16 @@
         android:paddingBottom="23dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/itemCompactCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="28dp"
-            android:elevation="16dp"
             android:translationZ="8dp"
-            app:cardCornerRadius="16dp">
+            app:cardCornerRadius="16dp"
+            app:cardElevation="4dp">
 
             <ImageView
                 android:id="@+id/itemCompactImage"
@@ -69,10 +71,11 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_gravity="bottom"
-            android:layout_marginStart="8dp"
+            android:layout_marginStart="16dp"
             android:layout_marginBottom="28dp"
             android:alpha="0.8"
             android:translationZ="8dp"
+            app:cardElevation="4dp"
             app:cardCornerRadius="8dp">
 
             <View
@@ -85,10 +88,13 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="8dp"
         android:orientation="vertical">
 
-        <Space
+        <View
             android:layout_width="108dp"
             android:layout_height="160dp"
             android:layout_marginBottom="8dp" />
