--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,6 +3,8 @@
     <color name="bg">#12091F</color>
     <color name="bg_opp">@color/bg_white</color>
     <color name="nav_bg">#000</color>
+    <color name="nav_bg_inv">#00000000</color>
     <color name="nav_tab">#40ffffff</color>
     <color name="nav_tab_disabled">#40ffffff</color>
+    <color name="status">#800F081F</color>
 </resources>
