--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,8 @@
     <color name="bg">@color/bg_white</color>
     <color name="bg_opp">@color/bg_black</color>
     <color name="nav_bg">#fff</color>
+    <color name="nav_bg_inv">#00FFFFFF</color>
     <color name="nav_tab">#40000000</color>
     <color name="nav_tab_disabled">#19000000</color>
+    <color name="status">#80E9E8F0</color>
 </resources>
