--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources>
     <style name="Theme.Base" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <item name="android:navigationBarColor">@android:color/transparent</item>
-        <item name="android:statusBarColor">#80E9E8F0</item>
+        <item name="android:statusBarColor">@color/status</item>
 
         <item name="colorPrimary">@color/pink_500</item>
         <item name="colorPrimaryVariant">@color/pink_700</item>
@@ -19,6 +19,7 @@
 
         <item name="android:ambientShadowAlpha">0.08</item>
         <item name="android:spotShadowAlpha">0.08</item>
+        <item name="android:interpolator">@anim/over_shoot</item>
     </style>
 
     <style name="Theme.Saikou" parent="Theme.Base">
