--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -25,10 +25,10 @@
                 android:id="@+id/mediaBanner"
                 android:layout_width="match_parent"
                 android:layout_height="128dp"
-                android:background="@color/pink_200"
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
-                tools:ignore="ContentDescription,ImageContrastCheck" />
+                tools:ignore="ContentDescription,ImageContrastCheck"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -61,23 +61,26 @@
                 android:ellipsize="marquee"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
-                android:fontFamily="@font/poppins_bold"
+                android:fontFamily="@font/poppins"
                 android:marqueeRepeatLimit="marquee_forever"
                 android:scrollHorizontally="false"
                 android:singleLine="true"
                 android:text="@string/slogan"
-                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title" />
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:transitionName="mediaTitle" />
 
         </FrameLayout>
 
         <nl.joery.animatedbottombar.AnimatedBottomBar
-            android:id="@+id/mediaTab"
+            android:id="@+id/mediaAnimeTab"
             android:layout_width="fill_parent"
             android:layout_height="64dp"
 
             android:paddingStart="32dp"
 
             android:paddingEnd="32dp"
+            android:visibility="gone"
             app:abb_animationDuration="300"
             app:abb_animationInterpolator="@anim/over_shoot"
             app:abb_badgeBackgroundColor="#F44336"
@@ -89,6 +92,29 @@
             app:abb_tabColorDisabled="@color/nav_tab_disabled"
             app:abb_tabColorSelected="?attr/colorPrimary"
             app:abb_tabs="@menu/anime_detail_menu"
+            app:abb_textAppearance="@style/NavBarText"
+            tools:ignore="SpeakableTextPresentCheck" />
+
+        <nl.joery.animatedbottombar.AnimatedBottomBar
+            android:id="@+id/mediaMangaTab"
+            android:layout_width="fill_parent"
+            android:layout_height="64dp"
+
+            android:paddingStart="32dp"
+
+            android:paddingEnd="32dp"
+            android:visibility="gone"
+            app:abb_animationDuration="300"
+            app:abb_animationInterpolator="@anim/over_shoot"
+            app:abb_badgeBackgroundColor="#F44336"
+            app:abb_indicatorColor="?attr/colorSecondary"
+            app:abb_indicatorLocation="bottom"
+            app:abb_indicatorMargin="28dp"
+            app:abb_selectedTabType="text"
+            app:abb_tabColor="@color/nav_tab"
+            app:abb_tabColorDisabled="@color/nav_tab_disabled"
+            app:abb_tabColorSelected="?attr/colorPrimary"
+            app:abb_tabs="@menu/manga_detail_menu"
             app:abb_textAppearance="@style/NavBarText"
             tools:ignore="SpeakableTextPresentCheck" />
     </com.google.android.material.appbar.AppBarLayout>
@@ -109,6 +135,7 @@
         android:elevation="8dp"
         android:focusable="true"
         android:src="@drawable/ic_round_notifications_none_24"
+        android:visibility="gone"
         tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />
 
     <androidx.constraintlayout.utils.widget.ImageFilterView
@@ -128,17 +155,20 @@
         android:layout_gravity="end|top"
         android:layout_margin="32dp"
         android:translationZ="4dp"
-        app:cardBackgroundColor="@color/violet_400"
         app:cardCornerRadius="16dp"
         app:cardElevation="16dp"
         app:layout_anchor="@id/mediaCollapsing"
         app:layout_anchorGravity="bottom">
 
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/mediaCoverImage"
             android:layout_width="108dp"
+            app:shapeAppearanceOverlay="@style/roundedImageView"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
+            tools:srcCompat="@tools:sample/backgrounds/scenic"
+            android:transitionName="mediaCover"
             tools:ignore="ContentDescription,ImageContrastCheck" />
     </androidx.cardview.widget.CardView>
 
