--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -5,18 +5,24 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/mediaBannerStatus"
+        android:layout_width="match_parent"
+        android:layout_height="128dp"
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription,ImageContrastCheck"
+        tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/mediaAppBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="0dp"
-        android:background="@color/nav_bg"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+        android:background="@color/nav_bg">
 
         <com.google.android.material.appbar.CollapsingToolbarLayout
             android:id="@+id/mediaCollapsing"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="128dp"
             app:expandedTitleMarginEnd="64dp"
             app:expandedTitleMarginStart="48dp"
             app:layout_scrollFlags="scroll|snap">
@@ -28,7 +34,7 @@
                 android:scaleType="centerCrop"
                 app:layout_collapseMode="parallax"
                 tools:ignore="ContentDescription,ImageContrastCheck"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -37,6 +43,25 @@
                 android:clickable="false"
                 android:src="@drawable/linear_gradient"
                 tools:ignore="ContentDescription" />
+
+            <TextView
+                android:id="@+id/mediaTitleCollapse"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginStart="156dp"
+                android:layout_marginEnd="32dp"
+                android:ellipsize="marquee"
+                android:focusable="true"
+                android:focusableInTouchMode="true"
+                android:fontFamily="@font/poppins"
+                android:marqueeRepeatLimit="marquee_forever"
+                android:scrollHorizontally="false"
+                android:singleLine="true"
+                android:text="@string/slogan"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:transitionName="mediaTitle" />
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
 
@@ -52,12 +77,12 @@
 
 
             <TextView
-                android:id="@+id/MediaTitle"
+                android:id="@+id/mediaTitle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginStart="148dp"
-                android:layout_marginEnd="32dp"
+                android:layout_marginStart="32dp"
+                android:layout_marginEnd="64dp"
                 android:ellipsize="marquee"
                 android:focusable="true"
                 android:focusableInTouchMode="true"
@@ -68,8 +93,78 @@
                 android:text="@string/slogan"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:transitionName="mediaTitle" />
+                android:transitionName="mediaTitle"
+                tools:visibility="gone" />
 
+            <LinearLayout
+                android:id="@+id/mediaAccessContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:gravity="center_horizontal|center_vertical"
+                android:paddingStart="158dp"
+                android:paddingEnd="16dp">
+
+                <LinearLayout
+                    android:id="@+id/mediaStatusContainer"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center_vertical"
+                    android:orientation="vertical">
+
+                    <Button
+                        android:id="@+id/mediaAddToList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:fontFamily="@font/poppins_bold"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:padding="8dp"
+                        android:singleLine="true"
+                        android:text="@string/add"
+                        android:textSize="10sp"
+                        android:textStyle="bold"
+                        app:cornerRadius="8dp"
+                        tools:ignore="SmallSp,TextContrastCheck" />
+
+                    <TextView
+                        android:id="@+id/mediaStatusTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/status"
+                        android:visibility="gone" />
+
+                    <TextView
+                        android:id="@+id/mediaStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ellipsize="marquee"
+                        android:fontFamily="@font/poppins_bold"
+                        android:marqueeRepeatLimit="marquee_forever"
+                        android:text="@string/ptw"
+                        android:textColor="@color/violet_400"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:layout_margin="8dp"
+                    android:padding="8dp"
+                    app:srcCompat="@drawable/ic_round_favorite_border_24"
+                    tools:ignore="ContentDescription" />
+
+                <ImageView
+                    android:id="@+id/imageView5"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:padding="8dp"
+                    app:srcCompat="@drawable/ic_round_notifications_none_24"
+                    tools:ignore="ContentDescription" />
+
+            </LinearLayout>
         </FrameLayout>
 
         <nl.joery.animatedbottombar.AnimatedBottomBar
@@ -93,7 +188,8 @@
             app:abb_tabColorSelected="?attr/colorPrimary"
             app:abb_tabs="@menu/anime_detail_menu"
             app:abb_textAppearance="@style/NavBarText"
-            tools:ignore="SpeakableTextPresentCheck" />
+            tools:ignore="SpeakableTextPresentCheck"
+            tools:visibility="visible" />
 
         <nl.joery.animatedbottombar.AnimatedBottomBar
             android:id="@+id/mediaMangaTab"
@@ -127,26 +223,35 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/mediaFAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|right|end"
-        android:layout_margin="12dp"
+        android:layout_margin="32dp"
         android:clickable="true"
         android:elevation="8dp"
         android:focusable="true"
-        android:src="@drawable/ic_round_notifications_none_24"
-        android:visibility="gone"
+        android:src="@drawable/ic_baseline_add_circle_outline_24"
         tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />
 
-    <androidx.constraintlayout.utils.widget.ImageFilterView
+    <androidx.cardview.widget.CardView
         android:id="@+id/mediaClose"
-        android:layout_width="64dp"
-        android:layout_height="64dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:layout_gravity="end"
-        android:padding="16dp"
-        android:src="@drawable/ic_round_close_24"
-        android:translationZ="8dp"
-        tools:ignore="ContentDescription" />
+        android:layout_margin="16dp"
+        android:translationZ="2dp"
+        app:cardBackgroundColor="@color/nav_bg"
+        app:cardCornerRadius="16dp">
+
+        <androidx.constraintlayout.utils.widget.ImageFilterView
+            android:id="@+id/mediaCloseImage"
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_round_close_24"
+            tools:ignore="ContentDescription" />
+    </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
         android:id="@+id/mediaCover"
@@ -164,12 +269,12 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/mediaCoverImage"
             android:layout_width="108dp"
-            app:shapeAppearanceOverlay="@style/roundedImageView"
             android:layout_height="160dp"
             android:scaleType="centerCrop"
-            tools:srcCompat="@tools:sample/backgrounds/scenic"
             android:transitionName="mediaCover"
-            tools:ignore="ContentDescription,ImageContrastCheck" />
+            app:shapeAppearanceOverlay="@style/roundedImageView"
+            tools:ignore="ContentDescription,ImageContrastCheck"
+            tools:srcCompat="@tools:sample/backgrounds/scenic[2]" />
     </androidx.cardview.widget.CardView>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
