--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -318,7 +318,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="32dp"
                         android:alpha="0.58"
-                        android:src="@drawable/ic_round_menu_book_24"
+                        android:src="@drawable/ic_round_import_contacts_24"
                         tools:ignore="ContentDescription" />
 
                     <TextView
@@ -424,7 +424,7 @@
             </FrameLayout>
         </LinearLayout>
 
-        <Space
+        <View
             android:id="@+id/homeSpace"
             android:layout_width="match_parent"
             android:layout_height="128dp" />
