Added Bottom Dialog Sheet of List Editor Added some new icons

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,7 @@
         <item name="android:fontFamily">@font/poppins</item>
         <item name="android:textColor">@color/bg_black</item>
 
+        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearanceOverlay.Demo</item>
         <item name="android:ambientShadowAlpha">0.08</item>
         <item name="android:spotShadowAlpha">0.08</item>
     </style>
