--- a/app/src/main/res/layout/activity_media.xml
+++ b/app/src/main/res/layout/activity_media.xml
@@ -107,9 +107,8 @@
 
                 <LinearLayout
                     android:id="@+id/mediaStatusContainer"
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="64dp"
-                    android:layout_weight="1"
                     android:gravity="center_vertical"
                     android:orientation="vertical">
 
@@ -117,7 +116,9 @@
                         android:id="@+id/mediaAddToList"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:clickable="false"
                         android:ellipsize="marquee"
+                        android:focusable="false"
                         android:fontFamily="@font/poppins_bold"
                         android:marqueeRepeatLimit="marquee_forever"
                         android:padding="8dp"
@@ -125,28 +126,56 @@
                         android:text="@string/add"
                         android:textSize="10sp"
                         android:textStyle="bold"
+                        android:visibility="gone"
                         app:cornerRadius="8dp"
                         tools:ignore="SmallSp,TextContrastCheck" />
 
                     <TextView
-                        android:id="@+id/mediaStatusTitle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="@string/status"
-                        android:visibility="gone" />
-
-                    <TextView
-                        android:id="@+id/mediaStatus"
+                        android:id="@+id/mediaUserStatus"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ellipsize="marquee"
                         android:fontFamily="@font/poppins_bold"
                         android:marqueeRepeatLimit="marquee_forever"
-                        android:text="@string/ptw"
-                        android:textColor="@color/violet_400"
-                        android:visibility="gone" />
+                        android:text="@string/status"
+                        android:textColor="?attr/colorPrimary"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
+
+                    <LinearLayout
+                        android:id="@+id/mediaUserProgressContainer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:visibility="gone"
+                        tools:visibility="visible">
+
+                        <TextView
+                            android:id="@+id/mediaUserProgress"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textColor="?attr/colorSecondary"
+                            android:textSize="16sp"
+                            tools:ignore="TextContrastCheck"
+                            tools:text="0" />
+
+                        <TextView
+                            android:id="@+id/mediaTotal"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:alpha="0.58"
+                            android:fontFamily="@font/poppins_bold"
+                            android:textSize="16sp"
+                            tools:text=" | ~" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"/>
                 <ImageView
                     android:id="@+id/mediaFav"
                     android:layout_width="48dp"
@@ -234,7 +263,7 @@
         android:clickable="true"
         android:elevation="8dp"
         android:focusable="true"
-        android:src="@drawable/ic_baseline_add_circle_outline_24"
+        android:src="@drawable/ic_round_add_circle_outline_24"
         tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck" />
 
     <androidx.cardview.widget.CardView
