--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -6,6 +6,12 @@
         <item name="android:textSize">14sp</item>
         <item name="android:padding">2sp</item>
     </style>
+    <style name="Suffix">
+        <item name="android:height">54dp</item>
+        <item name="android:fontFamily">@font/poppins_bold</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:layout_gravity">center</item>
+    </style>
     <style name="ShapeAppearanceOverlay.Demo" parent="Theme.AppCompat.DayNight.NoActionBar">
         <item name="cornerSize">20dp</item>
         <item name="cornerFamily">rounded</item>
