--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -142,7 +142,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:alpha="0.6"
-                    android:background="@color/bg_opp" />
+                    android:background="@color/bg_black" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -157,7 +157,7 @@
                         android:fontFamily="@font/poppins_bold"
                         android:text="@string/anime_list"
                         android:textAllCaps="true"
-                        android:textColor="@color/bg"
+                        android:textColor="@color/bg_white"
                         android:textSize="16sp" />
 
                     <View
@@ -188,7 +188,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:alpha="0.6"
-                    android:background="@color/bg_opp" />
+                    android:background="@color/bg_black" />
 
                 <LinearLayout
                     android:layout_width="wrap_content"
@@ -203,7 +203,7 @@
                         android:fontFamily="@font/poppins_bold"
                         android:text="@string/manga_list"
                         android:textAllCaps="true"
-                        android:textColor="@color/bg"
+                        android:textColor="@color/bg_white"
                         android:textSize="16sp" />
 
                     <View
