--- a/app/src/main/res/layout/item_compact.xml
+++ b/app/src/main/res/layout/item_compact.xml
@@ -4,23 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_marginTop="2dp"
+    android:layout_marginStart="-12dp"
+    android:layout_marginTop="-12dp"
+    android:layout_marginEnd="-12dp"
+    android:clipToPadding="false"
     android:orientation="vertical">
 
 
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="23dp">
+        android:clipToPadding="false"
+        android:padding="24dp">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/itemCompactCard"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="28dp"
             android:translationZ="8dp"
             app:cardCornerRadius="16dp"
             app:cardElevation="4dp">
@@ -30,8 +30,8 @@
                 android:layout_width="108dp"
                 android:layout_height="160dp"
                 android:scaleType="centerCrop"
-                app:shapeAppearanceOverlay="@style/roundedImageView"
                 android:transitionName="mediaCover"
+                app:shapeAppearanceOverlay="@style/roundedImageView"
                 tools:ignore="ContentDescription,ImageContrastCheck"
                 tools:srcCompat="@tools:sample/backgrounds/scenic" />
 
@@ -40,21 +40,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom|end"
-                android:background="#000000"
+                android:background="@drawable/item_score"
                 android:backgroundTint="#BFFFFFFF"
                 android:backgroundTintMode="multiply"
                 android:orientation="horizontal"
                 android:paddingStart="8dp"
-                android:paddingEnd="4dp">
+                android:paddingEnd="6dp">
 
                 <TextView
                     android:id="@+id/itemCompactScore"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="2dp"
                     android:fontFamily="@font/poppins_bold"
                     android:paddingTop="2dp"
                     android:textColor="?attr/colorOnPrimary"
                     android:textSize="12sp"
+                    tools:ignore="TextContrastCheck"
                     tools:text="0.0" />
 
                 <ImageView
@@ -73,12 +75,10 @@
             android:layout_width="16dp"
             android:layout_height="16dp"
             android:layout_gravity="bottom"
-            android:layout_marginStart="16dp"
-            android:layout_marginBottom="28dp"
             android:alpha="0.8"
             android:translationZ="8dp"
-            app:cardElevation="4dp"
-            app:cardCornerRadius="8dp">
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp">
 
             <View
                 android:layout_width="match_parent"
@@ -90,8 +90,8 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical">
