--- a/app/src/main/res/layout/item_episode_grid.xml
+++ b/app/src/main/res/layout/item_episode_grid.xml
@@ -23,10 +23,25 @@
         android:alpha="0.6"
         android:background="@color/bg_black" />
 
+    <TextView
+        android:id="@+id/itemEpisodeNumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="-16dp"
+        android:alpha="0.5"
+        android:ellipsize="start"
+        android:fontFamily="@font/poppins_bold"
+        android:singleLine="true"
+        android:textAlignment="textEnd"
+        android:textColor="@color/bg_white"
+        android:textSize="48sp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_margin="16dp"
         android:gravity="center_vertical"
         android:orientation="vertical">
 
@@ -35,27 +50,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ellipsize="end"
-            android:fontFamily="@font/poppins_light"
+            android:fontFamily="@font/poppins_bold"
             android:maxLines="3"
             android:text="@string/slogan"
             android:textColor="@color/bg_white"
             android:textSize="14sp"
             app:lineHeight="14dp" />
 
-        <TextView
-            android:id="@+id/itemEpisodeNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginTop="-14dp"
-            android:alpha="0.75"
-            android:ellipsize="start"
-            android:fontFamily="@font/poppins_bold"
-            android:singleLine="true"
-            android:textAlignment="textEnd"
-            android:textColor="@color/bg_white"
-            android:textSize="48sp"
-            tools:text="12" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
