add Chips for Pagination (less lag)

--- a/app/src/main/res/layout/fragment_anime_source.xml
+++ b/app/src/main/res/layout/fragment_anime_source.xml
@@ -133,7 +133,7 @@
             </LinearLayout>
 
             <com.google.android.material.chip.ChipGroup
-                android:id="@+id/animeSouceChip"
+                android:id="@+id/animeSouceChipGroup"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
