--- a/app/src/main/res/layout/item_episode_grid.xml
+++ b/app/src/main/res/layout/item_episode_grid.xml
@@ -55,7 +55,7 @@
             android:text="@string/slogan"
             android:textColor="@color/bg_white"
             android:textSize="14sp"
-            app:lineHeight="14dp" />
+            app:lineHeight="14sp" />
 
     </LinearLayout>
 
