--- a/app/src/main/res/layout/fragment_anime_source.xml
+++ b/app/src/main/res/layout/fragment_anime_source.xml
@@ -6,171 +6,190 @@
     android:layout_height="match_parent"
     tools:context=".anime.AnimeSourceFragment">
 
-    <LinearLayout
-        android:id="@+id/animeSourceContainer"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:clipToPadding="false"
-        android:orientation="vertical"
-        android:paddingBottom="32dp">
+        android:layout_height="wrap_content">
+
+        <ProgressBar
+            android:id="@+id/animeLoadProgressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            android:layout_marginEnd="32dp"
+            android:layout_marginBottom="32dp"
+            android:indeterminate="true"
+            android:visibility="visible"
+            tools:visibility="gone" />
 
         <LinearLayout
+            android:id="@+id/animeSourceContainer"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="-24dp"
+            android:layout_height="wrap_content"
+            android:clipToPadding="false"
             android:orientation="vertical"
-            android:padding="32dp">
-
-            <Button
-                android:id="@+id/animeSourceYT"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:backgroundTint="@color/fav"
-                android:insetTop="0dp"
-                android:insetBottom="0dp"
-                android:text="@string/play_yt"
-                android:textColor="@color/bg_white"
-                android:visibility="gone"
-                app:cornerRadius="12dp"
-                app:icon="@drawable/ic_round_play_circle_24"
-                app:iconTint="@color/bg_white"
-                tools:ignore="TextContrastCheck"
-                tools:visibility="gone" />
-
-            <com.google.android.material.textfield.TextInputLayout
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:hint="@string/source"
-                app:boxCornerRadiusBottomEnd="16dp"
-                app:boxCornerRadiusBottomStart="16dp"
-                app:boxCornerRadiusTopEnd="16dp"
-                app:boxCornerRadiusTopStart="16dp"
-                app:hintAnimationEnabled="true"
-                app:startIconDrawable="@drawable/ic_round_playlist_play_24">
-
-                <AutoCompleteTextView
-                    android:id="@+id/animeSource"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/poppins_bold"
-                    android:freezesText="false"
-                    android:inputType="none"
-                    android:padding="8dp"
-                    android:text="@string/watch"
-                    android:textAllCaps="true"
-                    android:textColor="?android:attr/textColorSecondary"
-                    android:textSize="14sp"
-                    tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:fontFamily="@font/poppins_bold"
-                android:padding="8dp"
-                android:text="@string/wrong"
-                android:textAlignment="textEnd"
-                android:textColor="?attr/colorSecondary" />
+            android:paddingBottom="32dp"
+            android:visibility="gone"
+            tools:visibility="visible">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
-                android:orientation="horizontal">
+                android:layout_marginBottom="-24dp"
+                android:orientation="vertical"
+                android:padding="32dp">
+
+                <Button
+                    android:id="@+id/animeSourceYT"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="16dp"
+                    android:backgroundTint="@color/fav"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:text="@string/play_yt"
+                    android:textColor="@color/bg_white"
+                    android:visibility="gone"
+                    app:cornerRadius="12dp"
+                    app:icon="@drawable/ic_round_play_circle_24"
+                    app:iconTint="@color/bg_white"
+                    tools:ignore="TextContrastCheck"
+                    tools:visibility="gone" />
+
+                <com.google.android.material.textfield.TextInputLayout
+                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                    android:layout_width="match_parent"
+                    android:layout_height="56dp"
+                    android:hint="@string/source"
+                    app:boxCornerRadiusBottomEnd="16dp"
+                    app:boxCornerRadiusBottomStart="16dp"
+                    app:boxCornerRadiusTopEnd="16dp"
+                    app:boxCornerRadiusTopStart="16dp"
+                    app:hintAnimationEnabled="true"
+                    app:startIconDrawable="@drawable/ic_round_playlist_play_24">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/animeSource"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/poppins_bold"
+                        android:freezesText="false"
+                        android:inputType="none"
+                        android:padding="8dp"
+                        android:text="@string/watch"
+                        android:textAllCaps="true"
+                        android:textColor="?android:attr/textColorSecondary"
+                        android:textSize="14sp"
+                        tools:ignore="LabelFor,TextContrastCheck,DuplicateSpeakableTextCheck" />
+                </com.google.android.material.textfield.TextInputLayout>
 
                 <TextView
-                    android:layout_width="0dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_gravity="end"
                     android:fontFamily="@font/poppins_bold"
-                    android:text="@string/eps"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:id="@+id/animeSourceList"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="1"
                     android:padding="8dp"
-                    app:srcCompat="@drawable/ic_round_view_list_24"
-                    app:tint="@color/bg_opp"
-                    tools:ignore="ContentDescription,ImageContrastCheck" />
+                    android:text="@string/wrong"
+                    android:textAlignment="textEnd"
+                    android:textColor="?attr/colorSecondary" />
 
-                <ImageView
-                    android:id="@+id/animeSourceGrid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.33"
-                    android:padding="8dp"
-                    app:srcCompat="@drawable/ic_round_grid_view_24"
-                    app:tint="@color/bg_opp"
-                    tools:ignore="ContentDescription,ImageContrastCheck" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/animeSourceCompact"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.33"
-                    android:padding="8dp"
-                    app:srcCompat="@drawable/ic_round_view_comfy_24"
-                    app:tint="@color/bg_opp"
-                    tools:ignore="ContentDescription,ImageContrastCheck" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/poppins_bold"
+                        android:text="@string/eps"
+                        android:textSize="16sp" />
 
-                <ImageView
-                    android:id="@+id/animeSourceTop"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="1"
-                    android:padding="8dp"
-                    android:rotation="90"
-                    app:srcCompat="@drawable/ic_round_arrow_back_ios_new_24"
-                    app:tint="@color/bg_opp"
-                    tools:ignore="ContentDescription,ImageContrastCheck" />
+                    <ImageView
+                        android:id="@+id/animeSourceList"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.33"
+                        android:padding="8dp"
+                        app:srcCompat="@drawable/ic_round_view_list_24"
+                        app:tint="@color/bg_opp"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
+
+                    <ImageView
+                        android:id="@+id/animeSourceGrid"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.33"
+                        android:padding="8dp"
+                        app:srcCompat="@drawable/ic_round_grid_view_24"
+                        app:tint="@color/bg_opp"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
+
+                    <ImageView
+                        android:id="@+id/animeSourceCompact"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="0.33"
+                        android:padding="8dp"
+                        app:srcCompat="@drawable/ic_round_view_comfy_24"
+                        app:tint="@color/bg_opp"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
+
+                    <ImageView
+                        android:id="@+id/animeSourceTop"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:alpha="1"
+                        android:padding="8dp"
+                        android:rotation="90"
+                        app:srcCompat="@drawable/ic_round_arrow_back_ios_new_24"
+                        app:tint="@color/bg_opp"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
+                </LinearLayout>
+
+                <com.google.android.material.chip.ChipGroup
+                    android:id="@+id/animeSouceChipGroup"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
             </LinearLayout>
 
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/animeSouceChipGroup"
+            <ProgressBar
+                android:id="@+id/animeSourceProgressBar"
+                style="?android:attr/progressBarStyle"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:id="@+id/animeSourceNotFound"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/poppins_bold"
+                android:padding="32dp"
+                android:text="@string/source_not_found"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:visibility="gone" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/animeEpisodesRecycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:clipToPadding="false"
+                android:nestedScrollingEnabled="false"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                app:spanCount="4"
+                tools:itemCount="12"
+                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                tools:listitem="@layout/item_episode_compact"
+                tools:orientation="vertical"
+                tools:scrollbars="vertical" />
 
         </LinearLayout>
-
-        <ProgressBar
-            android:id="@+id/animeSourceProgressBar"
-            style="?android:attr/progressBarStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/animeSourceNotFound"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/poppins_bold"
-            android:padding="32dp"
-            android:text="@string/source_not_found"
-            android:textAlignment="center"
-            android:textSize="16sp"
-            android:visibility="gone" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/animeEpisodesRecycler"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:clipToPadding="false"
-            android:nestedScrollingEnabled="false"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            app:spanCount="4"
-            tools:itemCount="12"
-            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            tools:listitem="@layout/item_episode_compact"
-            tools:orientation="vertical"
-            tools:scrollbars="vertical" />
-
-    </LinearLayout>
-
+    </FrameLayout>
 </androidx.core.widget.NestedScrollView>
