Added long click to show full description of episode fixed swipe refresh location

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,4 +7,5 @@
     <color name="nav_tab">#40ffffff</color>
     <color name="nav_tab_disabled">#40ffffff</color>
     <color name="status">#801F1F1F</color>
+    <color name="nav_status">#54000000</color>
 </resources>
