--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -5,6 +5,7 @@
     android:id="@+id/homeRefresh"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:clipToPadding="false"
     tools:context=".HomeFragment">
 
     <androidx.core.widget.NestedScrollView
@@ -18,30 +19,22 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <FrameLayout
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
                 android:padding="32dp">
 
-                <ProgressBar
-                    android:id="@+id/homeUserDataProgressBar"
-                    style="?android:attr/progressBarStyleHorizontal"
-                    android:layout_width="match_parent"
+                <FrameLayout
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="64dp"
-                    android:indeterminate="true" />
-
-                <LinearLayout
-                    android:id="@+id/homeUserDataContainer"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:layout_weight="1">
 
                     <LinearLayout
-                        android:layout_width="0dp"
+                        android:id="@+id/homeUserDataContainer"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
                         android:orientation="vertical">
 
                         <TextView
@@ -65,7 +58,8 @@
                                 android:alpha="0.58"
                                 android:fontFamily="@font/poppins"
                                 android:text="@string/episodes_watched"
-                                android:textSize="12sp" />
+                                android:textSize="12sp"
+                                tools:ignore="TextContrastCheck" />
 
                             <TextView
                                 android:id="@+id/homeUserEpisodesWatched"
@@ -101,24 +95,34 @@
 
                     </LinearLayout>
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="wrap_content"
+                    <ProgressBar
+                        android:id="@+id/homeUserDataProgressBar"
+                        style="?android:attr/progressBarStyleHorizontal"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:backgroundTint="@color/bg_black"
-                        app:cardCornerRadius="32dp">
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="16dp"
+                        android:indeterminate="true" />
 
-                        <ImageView
-                            android:id="@+id/homeUserAvatar"
-                            android:layout_width="64dp"
-                            android:layout_height="64dp"
-                            android:scaleType="centerCrop"
-                            tools:ignore="ContentDescription,ImageContrastCheck"
-                            tools:src="@tools:sample/avatars" />
+                </FrameLayout>
 
-                    </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:backgroundTint="@color/bg_black"
+                    app:cardCornerRadius="32dp">
 
-                </LinearLayout>
-            </FrameLayout>
+                    <ImageView
+                        android:id="@+id/homeUserAvatar"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:scaleType="centerCrop"
+                        tools:ignore="ContentDescription,ImageContrastCheck"
+                        tools:src="@tools:sample/avatars" />
+
+                </androidx.cardview.widget.CardView>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
