--- a/app/src/main/res/layout/item_episode_list.xml
+++ b/app/src/main/res/layout/item_episode_list.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="8dp"
+    android:longClickable="true"
     app:cardCornerRadius="16dp">
 
     <LinearLayout
@@ -15,19 +16,25 @@
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
-            android:layout_width="180dp"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_gravity="top"
-            android:minHeight="108dp"
+            app:cardBackgroundColor="@color/nav_bg"
             app:cardCornerRadius="16dp">
+
+            <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_gravity="center"
+                android:indeterminate="true" />
 
             <ImageView
                 android:id="@+id/itemEpisodeImage"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="180dp"
+                android:layout_height="109dp"
+                android:layout_gravity="center"
                 android:scaleType="centerCrop"
-                tools:ignore="ContentDescription"
-                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+                tools:ignore="ContentDescription" />
 
             <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
@@ -75,9 +82,10 @@
             <TextView
                 android:id="@+id/itemEpisodeDesc"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:alpha="0.58"
                 android:ellipsize="end"
+                android:maxLines="4"
                 android:textStyle="italic"
                 app:lineHeight="16sp"
                 tools:ignore="TextContrastCheck" />
