--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,7 +22,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_vertical"
                 android:orientation="horizontal"
                 android:padding="32dp">
 
@@ -45,7 +44,7 @@
                             android:gravity="center"
                             android:text="@string/username"
                             android:textAllCaps="true"
-                            android:textSize="24sp" />
+                            android:textSize="16sp" />
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -109,16 +108,17 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:backgroundTint="@color/bg_black"
                     app:cardCornerRadius="32dp">
 
                     <ImageView
                         android:id="@+id/homeUserAvatar"
-                        android:layout_width="64dp"
-                        android:layout_height="64dp"
-                        android:scaleType="centerCrop"
-                        tools:ignore="ContentDescription,ImageContrastCheck"
-                        tools:src="@tools:sample/avatars" />
+                        android:layout_width="52dp"
+                        android:layout_height="52dp"
+                        android:scaleType="center"
+                        app:srcCompat="@drawable/ic_round_settings_24"
+                        tools:ignore="ContentDescription,ImageContrastCheck" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -293,7 +293,7 @@
                         android:requiresFadingEdge="horizontal"
                         tools:itemCount="4"
                         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/item_compact"
+                        tools:listitem="@layout/item_media_compact"
                         tools:orientation="horizontal" />
                 </FrameLayout>
             </LinearLayout>
@@ -364,7 +364,7 @@
                         android:requiresFadingEdge="horizontal"
                         tools:itemCount="4"
                         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/item_compact"
+                        tools:listitem="@layout/item_media_compact"
                         tools:orientation="horizontal" />
                 </FrameLayout>
             </LinearLayout>
@@ -431,7 +431,7 @@
                         android:requiresFadingEdge="horizontal"
                         tools:itemCount="4"
                         tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-                        tools:listitem="@layout/item_compact"
+                        tools:listitem="@layout/item_media_compact"
                         tools:orientation="horizontal" />
                 </FrameLayout>
             </LinearLayout>
