--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -32,31 +32,36 @@
                     android:layout_height="56dp" />
             </LinearLayout>
 
-            <ani.saikou.FadingEdgeRecyclerView
-                android:id="@+id/searchRecyclerView"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:clipToPadding="false"
-                android:isScrollContainer="false"
-                android:nestedScrollingEnabled="false"
-                android:padding="16dp"
-                android:requiresFadingEdge="vertical"
-                android:visibility="gone"
-                app:spanCount="2"
-                tools:itemCount="10"
-                tools:layoutManager="GridLayoutManager"
-                tools:listitem="@layout/item_media_compact"
-                tools:orientation="vertical"
-                tools:visibility="visible" />
+                android:layout_height="wrap_content">
 
-            <ProgressBar
-                android:id="@+id/searchProgress"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="match_parent"
-                android:layout_height="48dp"
-                android:layout_margin="24dp"
-                android:indeterminate="true"
-                android:visibility="gone" />
+                <ani.saikou.FadingEdgeRecyclerView
+                    android:id="@+id/searchRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:clipToPadding="false"
+                    android:nestedScrollingEnabled="true"
+                    android:padding="16dp"
+                    android:requiresFadingEdge="vertical"
+                    android:visibility="gone"
+                    app:spanCount="2"
+                    tools:itemCount="10"
+                    tools:layoutManager="GridLayoutManager"
+                    tools:listitem="@layout/item_media_compact"
+                    tools:orientation="vertical"
+                    tools:visibility="visible" />
+
+                <ProgressBar
+                    android:id="@+id/searchProgress"
+                    style="?android:attr/progressBarStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="48dp"
+                    android:layout_gravity="bottom"
+                    android:layout_margin="24dp"
+                    android:indeterminate="true"
+                    android:visibility="gone" />
+            </FrameLayout>
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
